# Sara

./: .gitignore  README.md  README.zh-cn.md
api/: .env  .env_tmp  app.py  app_factory.py  pyproject.toml
api/configs/: __init__.py  deploy_config.py  file_config.py  llm_config.py  log_config.py  middleware_config.py
api/controllers/cli/: __init__.py  chat.py  command.py  file.py  rag.py
api/controllers/web/: __init__.py  chat.py  completion.py  file.py  hello.py  rag.py
api/core/providers/: __init__.py  litellm_provider.py
api/core/rag/: file_indexer.py  retriever.py
api/core/rag/file_loader/: README.md  __init__.py  docling_loader.py
api/extensions/: __init__.py  ext_blueprints.py  ext_db.py  ext_logging.py  ext_migrate.py  ext_storage.py
api/extensions/storage/: base_storage.py  local_storage.py
api/migrations/: env.py
api/migrations/versions/: 351454506ccb_recreate_upload_files_table.py
api/models/: __init__.py  base.py  database.py  model.py
api/services/: chat_service.py  file_service.py
api/storage/index_files/: .gitignore
api/storage/upload_files/: .gitignore
api/tests/: test_chat_service.py  test_docling_loader.py  test_file_indexer.py  test_file_service.py  test_rag_integration.py  test_retriever.py
api/tests/test_data/: doc1.docx
doc/: README_CN.md  api.md  file_structure.md
docker/: docker-compose.middleware.yaml  middleware.env
web/: index.html  pnpm-lock.yaml  vite.config.ts
web/src/: main.tsx
web/src/app/: App.tsx
web/src/imports/: Body.tsx  svg-hfhi0zz7rh.ts
web/src/styles/: fonts.css  theme.css
(+5 files in other folders)
