[project]
name = "sara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask-pydantic~=0.13.1",
    "flask-restx~=1.3.0",
    "flask-sqlalchemy~=3.1.1",
    "psycopg2>=2.9.10",
    "pydantic~=2.11.7",
    "pydantic-settings~=2.6.0",
    "flask-cors~=4.0.0",
    "flask-migrate~=4.0.7",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "transformers>=5.3.0",
]

[project.scripts]
sara = "controllers.cli.command:app"

[tool.setuptools]
packages = ["controllers", "controllers.cli", "controllers.web", "core", "core.providers", "core.rag", "core.rag.file_loader", "services", "models", "configs", "extensions", "extensions.storage"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
